# gamelan-notation

./: .coverage  .env  .gitignore  README.md  pyproject.toml
config/: config.yaml  notation2midi.yaml  notations.yaml
config/font/: NotepadPP_BaliFont5_fmt.xml  balimusic5font copy.tsv  balimusic5font.tsv  modifiers.tsv
config/grammars/: README.md  font5.ebnf  metadata.ebnf  notation.ebnf
config/instruments/: effects.tsv  instruments.tsv  rules.tsv
config/midi/: Instrument mapping.xlsx  README.md  gamelan_midinotes1.tsv  gamelan_presets1.tsv
data/: Endorsements.txt  README.md  new_.tsv  nomatch_new_.tsv  nomatch_old.tsv  old.tsv
data/OLD/: Janger.tsv  Kahyangan (dance improv.)_full_GAMELAN1.mid  Kahyangan_font5.tsv  Puspa Mekar.tsv  Sekar Gendot font5.tsv  rejang dewa pengawak reyong_font5.tsv  rejang dewa pengawak_old_font5.tsv  rejang dewa_old_font5.tsv
data/cendrawasih/: Cendrawasih .mid  Cendrawasih gangsa p.mid  Cendrawasih gangsa s.mid  Cendrawasih.csv  Cendrawasih.xlsx
data/doc_template/: Template.docx  ~$mplate.docx
data/font/: NotepadPP_BaliFont5_fmt.xml  NotepadPP_BaliFont5_fmt_old.xml  balimusic4font.tsv  balimusic5font.tsv
data/font-definitions/: NotepadPP_BaliFont5_fmt.xml
data/grammars/: font5.ebnf  metadata.ebnf  notation.ebnf  notation_model.pickle  notation_nopath.ebnf
data/instrument-info/: gk_instrumenttags.tsv
notebooks/: notation.ipynb
settings/: NotepadPP_BaliFont4_fmt.xml  NotepadPP_BaliFont5_fmt.xml  README.md  balimusic4font copy.tsv  balimusic4font.csv  balimusic4font.tsv  balimusic5font.tsv  config.yaml  convert4to5font.tsv  data.yaml  instruments.tsv  instruments_old.csv  instrumenttags.csv  instrumenttags_0.csv  instrumenttags_1.csv  instrumenttags_2.csv  instrumenttest.csv  midinotes.csv  midinotes.tsv  midinotes_new.csv  midinotes_old.csv  notation-info.yaml  notation2midi.yaml  operators.tsv  run-settings.yaml  soundfont.yaml
src/: balimusic_font.py  debug_tools.py  font_specific_code.py  main.py  midi_to_notation.py  notation.py  notation_classes.py  notation_constants.py  notation_settings.py  notation_to_midi.py  pianoroll.py  score_validation.py  settings.py  settings_validation.py  test.py  tomidi.py  utils.py
tests/: README.md  conftest.py  test_dict_to_score.py  test_font_to_valid_notes.py  test_metadata_classes.py  test_score_validation.py  test_utils.py
vba/: modify-notationfiles.xlsm
(+224 files in other folders)
