[tool.poetry]
name = "gamelan-notation"
version = "0.1.0"
description = ""
authors = ["Marc Paelinck <marc.paelinck@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
