[tool.poetry]
name = "gamelan-notation"
version = "0.1.0"
description = ""
authors = ["Marc Paelinck <marc.paelinck@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pydantic = "^2.8.2"
eth-pydantic-types = "^0.1.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
scipy = "^1.14.0"
pyfluidsynth = "^1.3.3"
pyyaml = "^6.0.2"
pyautogui = "^0.9.54"
deadcode = "^2.4.1"
regex = "^2024.11.6"
tatsu = "^5.13.1"
vulture = "^2.14"
python-docx = "^1.1.2"
docx2pdf = "^0.1.8"
pillow = "^11.1.0"
reportlab = "^4.3.1"
unittest-parametrize = "^1.6.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = ["fixme", "consider-using-f-string", "eval-used"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
